fix unit tests for authorService